--- a/FindTrainingVideos/src/main/resources/templates/error.html
+++ b/FindTrainingVideos/src/main/resources/templates/error.html
@@ -2,7 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Suwannaphum">
     <title>Something went wrong...</title>
+    <style>
+        body{
+            font-family: 'Suwannaphum', serif;
+            background-image: url("https://catherineasquithgallery.com/uploads/posts/2021-02/1612760284_87-p-fon-goluboi-nezhnii-s-razvodami-147.jpg");
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <h2>Error!</h2>
