--- a/FindTrainingVideos/src/main/resources/templates/login.html
+++ b/FindTrainingVideos/src/main/resources/templates/login.html
@@ -2,30 +2,36 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Suwannaphum">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>Sign In</title>
+  <style>
+    body{
+      font-family: 'Suwannaphum', serif;
+      background-image: url("https://catherineasquithgallery.com/uploads/posts/2021-02/1612760284_87-p-fon-goluboi-nezhnii-s-razvodami-147.jpg");
+      background-size: cover;
+    }
+  </style>
 </head>
 <body>
-<div class="container" style="padding: 10px;">
-  <div class="row">
-    <div class="col-4 container bg-light rounded" >
-      <h1>Sign In</h1>
-      <div class="form-group">
+<div class="container align-items-center d-flex" style="padding: 10px; height:600px;">
+  <div class="container col-4 bg-light rounded" style="padding: 10px; width: 500px" >
+      <h1 style="text-align: center">Sign In</h1>
+      <div class="form-group" style="margin: 10px;">
         <div>
           <div class="form-group">
             <label for="login">Login</label>
             <input type="text" name="login" id="login" class="form-control">
-            <div style="color:red">login Error</div>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
             <input type="password" name="password" id="password" class="form-control">
           </div>
           <a th:href="@{/register}"><small class="text-muted">Create an account.</small></a></br>
-          <input type="submit" class="btn btn-success" value="Sign In" onclick="login()"/>
+          <input type="submit" class="btn btn-primary" value="Sign In" onclick="login()"/>
+          <div style="color:red" id="errorOutput"></div>
         </div>
       </div>
-    </div>
   </div>
 </div>
 <script>
@@ -35,20 +41,18 @@
   async function login() {
     let login = document.getElementById("login").value;
     let password = document.getElementById("password").value;
-    fetch("/login", { method: 'POST',  headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' }, body: JSON.stringify({ login: login, password: password }) })
-    .then((response) => {
-        if (response.status === 200) {
-          localStorage.setItem("token", response.headers.get("Authorization"));
-          if (login === "pasyagitka") {
-            document.location.assign("/adminmain");
-          } else {
-           document.location.assign("/usermain");
-          }
-      } else {
-        document.querySelector("#result").style.color = "#e74c3c";
-        document.querySelector("#result").innerHTML = data.error;
-      }
-    });
+    let response = await fetch("/login", { method: 'POST',  headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' }, body: JSON.stringify({ login: login, password: password }) })
+    if (response.status === 200) {
+        localStorage.setItem("token", response.headers.get("Authorization"));
+        if ((await response.text()) === "ROLE_ADMIN") document.location.assign("/adminmain");
+        else document.location.assign("/usermain");
+    } else {
+        let tr = '';
+        let pdata = (await response.json());
+        let errors =  pdata.errors;
+        errors.forEach(function (value) {tr += value + '<br>'; });
+        document.querySelector("#errorOutput").innerHTML = tr;
+    }
   }
 </script>
 </body>
